feat: create containers

--- a/pipeline/logstash/pipeline/logstash.conf
+++ b/pipeline/logstash/pipeline/logstash.conf
@@ -1,11 +1,15 @@
 input {
+	beats {
+		port => 5044
+	}
+
 	tcp {
 		port => 50000
 	}
 
 	kafka {
 		bootstrap_servers => "kafka-cmt:9092"
-		topics => [ "book" ]
+		topics => ["product", "ingredient", "test_1"]
 		decorate_events => "basic"
 		codec => "json"
 	}
@@ -13,13 +17,38 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
-	
+	if [alias] {
+		mutate {
+			lowercase => [ "alias", "name" ]
+			strip => [ "alias", "name" ]
+		}
+	}
+	if [ingredients] {
+		mutate {
+			lowercase => [ "ingredients", "name" ]
+			strip => [ "ingredients", "name" ]
+		}
+	}
+	if [@metadata][kafka][topic] == "test_1" {
+		mutate {
+			add_field => { "[@metadata][es_index]" => "test-3" }
+		}
+	} else {
+		mutate {
+			add_field => { "[@metadata][es_index]" => "cosmetic" }
+		}
+	}
 }
 
 output {
-	mongodb {
-		uri => "mongodb://mongo-book:27017"
-		database => "book_database" 
-		collection => "goodreads"
+	elasticsearch {
+		hosts => ["elasticsearch-cmt:9200"]
+		user => "logstash_internal"
+		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		doc_as_upsert => true
+    	action => "update"
+		index => "%{[@metadata][es_index]}"
+		document_id => "%{id}"
+		workers => 1
 	}
 }
