--- a/pipeline/docker-compose.yml
+++ b/pipeline/docker-compose.yml
@@ -2,10 +2,66 @@ version: '3.7'
 
 services:
 
+  # The setup service initializes users inside Elasticsearch — such as 'logstash_internal' and 'kibana_system' — with the
+  # values of the passwords defined in the '.env' file. It also creates the roles required by some of these users.
+  # 
+  # This task only needs to be performed once during the initial startup.
+  # Subsequent runs will reset the passwords of existing users to the values defined inside the '.env' file
+  # 
+  # To run: docker compose up setup
+  setup:
+    profiles:
+      - setup
+    build:
+      context: setup/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    init: true
+    volumes:
+      - ./setup/entrypoint.sh:/entrypoint.sh:ro,Z
+      - ./setup/lib.sh:/lib.sh:ro,Z
+      - ./setup/roles:/roles:ro,Z
+    environment:
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+      METRICBEAT_INTERNAL_PASSWORD: ${METRICBEAT_INTERNAL_PASSWORD:-}
+      FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
+      HEARTBEAT_INTERNAL_PASSWORD: ${HEARTBEAT_INTERNAL_PASSWORD:-}
+      MONITORING_INTERNAL_PASSWORD: ${MONITORING_INTERNAL_PASSWORD:-}
+      BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
+    networks:
+      - book
+    depends_on:
+      - elasticsearch
+
+  elasticsearch:
+    container_name: elasticsearch-bookrec
+    build:
+      context: elasticsearch/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - elasticsearch:/usr/share/elasticsearch/data:Z
+    ports:
+      - 9200:9200
+      - 9300:9300
+    environment:
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      discovery.type: single-node
+    networks:
+      - book
+    restart: unless-stopped
+
   logstash:
-    container_name: logstash-book
+    container_name: logstash-bookrec
     build:
       context: logstash/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
@@ -17,13 +73,32 @@ services:
     environment:
       LS_JAVA_OPTS: -Xms256m -Xmx256m
       LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
-      MONGODB_URI: mongodb://mongo-book:27017
     networks:
-      - book_network
+      - book
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+  kibana:
+    container_name: kibana-bookrec
+    build:
+      context: kibana/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
+    ports:
+      - 5601:5601
+    environment:
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+    networks:
+      - book
+    depends_on:
+      - elasticsearch
     restart: unless-stopped
 
   zookeeper:
-    container_name: zookeeper-book
+    container_name: zookeeper-bookrec
     image: docker.io/bitnami/zookeeper:3.9
     ports:
       - "2181:2181"
@@ -32,10 +107,10 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes 
     networks:
-      - book_network
+      - book
 
   kafka:
-    container_name: kafka-book
+    container_name: kafka-bookrec
     image: docker.io/bitnami/kafka:3.4 
     ports:
       - "9092:9092"
@@ -45,12 +120,12 @@ services:
     depends_on:
       - zookeeper
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-book:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-bookrec:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_LISTENERS: PLAINTEXT://:9092,PLAINTEXT_HOST://:29092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-book:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-bookrec:9092,PLAINTEXT_HOST://localhost:29092
     networks:
-      - book_network
+      - book
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
@@ -59,25 +134,17 @@ services:
     ports:
       - "9000:9000"
     environment:
-      KAFKA_BROKERCONNECT: kafka-book:9092
+      KAFKA_BROKERCONNECT: kafka-bookrec:9092
     networks:
-      - book_network
-
-  mongo:
-    container_name: mongo-book
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    networks:
-      - book_network
+      - book
 
 networks:
-  book_network:
+  book:
     driver: bridge
 
 volumes:
+  elasticsearch:
+    driver: local
   zookeeper_data:
     driver: local
   kafka_data:
