--- a/pipeline/logstash/pipeline/logstash.conf
+++ b/pipeline/logstash/pipeline/logstash.conf
@@ -9,7 +9,7 @@ input {
 
 	kafka {
 		bootstrap_servers => "kafka-cmt:9092"
-		topics => ["product", "ingredient", "test_1"]
+		topics => ["book"]
 		decorate_events => "basic"
 		codec => "json"
 	}
@@ -17,26 +17,8 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
-	if [alias] {
-		mutate {
-			lowercase => [ "alias", "name" ]
-			strip => [ "alias", "name" ]
-		}
-	}
-	if [ingredients] {
-		mutate {
-			lowercase => [ "ingredients", "name" ]
-			strip => [ "ingredients", "name" ]
-		}
-	}
-	if [@metadata][kafka][topic] == "test_1" {
-		mutate {
-			add_field => { "[@metadata][es_index]" => "test-3" }
-		}
-	} else {
-		mutate {
-			add_field => { "[@metadata][es_index]" => "cosmetic" }
-		}
+	mutate {
+		strip => [ "name", "author", "description" ]
 	}
 }
 
@@ -47,7 +29,7 @@ output {
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 		doc_as_upsert => true
     	action => "update"
-		index => "%{[@metadata][es_index]}"
+		index => "book-1"
 		document_id => "%{id}"
 		workers => 1
 	}
