--- a/pipeline/logstash/pipeline/logstash.conf
+++ b/pipeline/logstash/pipeline/logstash.conf
@@ -8,7 +8,7 @@ input {
 	}
 
 	kafka {
-		bootstrap_servers => "kafka-cmt:9092"
+		bootstrap_servers => "kafka-bookrec:9092"
 		topics => ["book"]
 		decorate_events => "basic"
 		codec => "json"
@@ -17,14 +17,20 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
-	mutate {
-		strip => [ "name", "author", "description" ]
+	if [series] {
+		mutate {
+			strip => [ "name", "author", "description", "series" ]
+		}	
+	} else {
+		mutate {
+			strip => [ "name", "author", "description" ]
+		}
 	}
 }
 
 output {
 	elasticsearch {
-		hosts => ["elasticsearch-cmt:9200"]
+		hosts => ["elasticsearch-bookrec:9200"]
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 		doc_as_upsert => true
