feat[mtuan]: read and save data from csv

--- a/pipeline/logstash/pipeline/logstash.conf
+++ b/pipeline/logstash/pipeline/logstash.conf
@@ -22,7 +22,7 @@ filter {
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 		query => "_id:%{[id]}"
-		index => "book-test"
+		index => "book-v1"
 		fields => { 
 			"review_counts" => "temp_review_counts"
 			"rating" => "temp_rating"
@@ -69,11 +69,11 @@ filter {
 	}
 	if [series] {
 		mutate {
-			strip => [ "name", "author", "description", "series" ]
+			strip => [ "name", "author", "description", "series", "genres" ]
 		}	
 	} else {
 		mutate {
-			strip => [ "name", "author", "description" ]
+			strip => [ "name", "author", "description", "genres" ]
 		}
 	}
 }
